--- a/templates/accuracy.html
+++ b/templates/accuracy.html
@@ -1,5 +1,73 @@
-{% extends "base.html" %} {% block content %}
+<html lang="en">
 
-<h2>Data History</h2>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Image Classification Online Demo</title>
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+        <script src="/static/js/pooper.min.js"></script>
+        <script src="/static/js/jquery.min.js"></script>
+        <script src="/static/js/bootstrap.min.js"></script>
+        <link href="/static/css/main.css"" rel="stylesheet">  
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>    
+    </head>
 
-{% endblock %}
+    <body> 
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <!-- Brand/logo -->
+            <a class="navbar-brand" href="/">Image Classiication</a>
+            
+            <!-- Links -->
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                <a class="nav-link" href="/">Demo</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/accuracy">Accuracy</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="/info">Information</a>
+                </li>
+            </ul>
+        </nav>
+
+
+    <div class="container" style="margin-top:2em">
+        <div class="column one-twice">
+            <canvas id="bar-chart" width="750" height="450"></canvas>
+            
+       </div>
+    
+        <div class="column one-twice">
+            <canvas id="pie-chart" width="750" height="450"></canvas>
+        </div>   
+    </div>
+
+    <br/>
+    <div >
+        <form action="/choose_image", method="POST">
+            <select class="form-control" name="image_category" id='image_category'>
+                <option value="result1">result1</option>
+                <option value="result2">result2</option>
+                <option value="result3">result3</option>
+                <option value="result4">result4</option>
+                <option value="result5">result5</option>
+                <option value="none">none</option>
+            </select>
+            <button type="submit" class="btn btn-primary">See Images</button>
+        </form>  
+
+        {% for url in urls %}
+            <img class = "img-preview" src="{{ url }}">
+        {% endfor %}
+            
+    </div>
+        
+    </body>
+
+    <footer>
+        <script src="/static/js/main.js" type="text/javascript"></script>    
+    </footer>
+
+</html>
